<resources>
    <string name="app_name">TabataTimer</string>
    <string name="my_sequences">My sequences</string>
    <string name="settings">Settings</string>
    <string name="add_sequence">Add sequence</string>
    <string name="name">Name</string>
    <string name="warm_up">Warm-Up</string>
    <string name="rest">Rest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="warm_up_label">Warm up</string>
    <string name="workout_label">Workout</string>
    <string name="rest_label">Rest</string>
    <string name="clean_confirmation">Do you want to delete all data?(App will be closed)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="language_pref" translatable="false">language_pref</string>
    <string name="font_scale" translatable="false">font_scale</string>
    <string name="clean_data" translatable="false">clean_data</string>
    <string name="language_summary">Change language</string>
    <string name="language_title">Language</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="clean_data_lable">Clean data</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="finished_label">Good work!</string>
    <string name="my_timers">My timers</string>
    <string name="cycles">Cycles</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>