<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <item
                android:id="@+id/add_sequence_nav_btn"
                android:title="@string/add_sequence"
                android:icon="@drawable/ic_add"/>
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/my_sequences_nav_btn"
                android:title="@string/my_sequences"
                android:icon="@drawable/ic_timer_menu"/>
            <item
                android:id="@+id/settings_nav_btn"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings"/>

        </menu>
    </item>
</menu>