<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".screens.add.AddFragment">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/linearLayoutCompat"
      android:layout_width="0dp"
      android:layout_height="70dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


  </androidx.appcompat.widget.LinearLayoutCompat>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

    <EditText
        android:id="@+id/cycles_et"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Cycles"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cycles_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <EditText
        android:id="@+id/rounds_et"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="323dp"
        android:text="Rounds"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rounds_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout2"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.003">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/warm_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/warmUp_minutes"
        android:layout_width="60dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></NumberPicker>

    <NumberPicker
        android:id="@+id/warmUp_seconds"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.52"></NumberPicker>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <NumberPicker
        android:id="@+id/workout_minutes"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/warmUp_seconds"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.551"></NumberPicker>

    <NumberPicker
        android:id="@+id/workout_seconds"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.448"></NumberPicker>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Workout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
  <!--  <NumberPicker-->
<!--      android:id="@+id/warmUp_minutes"-->
<!--      android:layout_width="60dp"-->
<!--      android:layout_height="100dp"-->
<!--      tools:layout_editor_absoluteX="1dp"-->
<!--      tools:layout_editor_absoluteY="129dp"></NumberPicker>-->

<!--  <NumberPicker-->
<!--      android:id="@+id/warmUp_seconds"-->
<!--      android:layout_width="60dp"-->
<!--      android:layout_height="100dp"-->
<!--      app:layout_constraintBottom_toBottomOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintHorizontal_bias="0.095"-->
<!--      app:layout_constraintStart_toEndOf="@+id/textView"-->
<!--      app:layout_constraintTop_toTopOf="parent"-->
<!--      app:layout_constraintVertical_bias="0.204"></NumberPicker>-->

<!--  <TextView-->
<!--      android:id="@+id/textView"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginEnd="25dp"-->
<!--      android:text=":"-->
<!--      android:textSize="@android:dimen/app_icon_size"-->
<!--      app:layout_constraintEnd_toStartOf="@+id/warmUp_seconds"-->
<!--      tools:layout_editor_absoluteY="147dp" />-->

<!--  <EditText-->
<!--      android:id="@+id/editTextName"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginTop="16dp"-->
<!--      android:ems="10"-->
<!--      android:inputType="textPersonName"-->
<!--      android:text="Name"-->
<!--      app:layout_constraintEnd_toStartOf="@+id/button"-->
<!--      app:layout_constraintHorizontal_bias="0.308"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintTop_toTopOf="parent" />-->

<!--  <Button-->
<!--      android:id="@+id/button"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginTop="16dp"-->
<!--      android:layout_marginEnd="44dp"-->
<!--      android:text="Button"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintTop_toTopOf="parent" />-->

<!--  <TextView-->
<!--      android:id="@+id/textView4"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginTop="20dp"-->
<!--      android:text="Warm-Up"-->
<!--      android:textSize="20sp"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintHorizontal_bias="0.115"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/editTextName" />-->

<!--  <TextView-->
<!--      android:id="@+id/textView3"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginTop="16dp"-->
<!--      android:text="Workout"-->
<!--      android:textSize="20sp"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintHorizontal_bias="0.668"-->
<!--      app:layout_constraintStart_toEndOf="@+id/textView4"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/button" />-->

<!--  <NumberPicker-->
<!--      android:id="@+id/workout_minutes"-->
<!--      android:layout_width="60dp"-->
<!--      android:layout_height="100dp"-->
<!--      tools:layout_editor_absoluteX="229dp"-->
<!--      tools:layout_editor_absoluteY="129dp"></NumberPicker>-->

<!--  <NumberPicker-->
<!--      android:id="@+id/workout_seconds"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="100dp"-->
<!--      tools:layout_editor_absoluteX="331dp"-->
<!--      tools:layout_editor_absoluteY="129dp"></NumberPicker>-->

<!--  <TextView-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:text=":"-->
<!--      android:textSize="@android:dimen/app_icon_size"-->
<!--      tools:layout_editor_absoluteX="306dp"-->
<!--      tools:layout_editor_absoluteY="147dp" />-->

  <NumberPicker
      android:id="@+id/rest_minutes"
      android:layout_width="60dp"
      android:layout_height="100dp"
      android:layout_marginStart="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"></NumberPicker>

  <NumberPicker
      android:id="@+id/rest_seconds"
      android:layout_width="60dp"
      android:layout_height="100dp"
      android:layout_marginEnd="240dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"></NumberPicker>

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text=":"
      android:textSize="@android:dimen/app_icon_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/rest_seconds"
      app:layout_constraintHorizontal_bias="0.538"
      app:layout_constraintStart_toEndOf="@+id/rest_minutes"
      app:layout_constraintTop_toBottomOf="@+id/textView11"
      app:layout_constraintVertical_bias="0.255" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="68dp"
      android:text="@string/rest"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.161"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>